--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
-  "dbtype": "sqlite",
-  "staticdir": "../../MCloud",
-  "passcode":  ""
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "dbtype": "sqlite",
+    // sqlite -> SQLite
+    // pg -> PostgreSQL
+
+    "dbstr": "data/data.db",
+    // for SQLite, it's only the filename (i.e., without "Filename=").
+    // for PostgreSQL, it's the connection string.
+
+    "staticdir": "../MusicCloud",
+    // directory path to static web files
+    // (default to not serve static files)
+
+    "storagedir": "data/storage",
+    // directory path to store track files
+    // (default: "data/storage")
+
+    "passcode": ""
+    // if it's not empty, the user needs the passcode to access the website.
 }
