--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "dbtype": "sqlite",
-  "staticdir": "../../MCloud"
+  "staticdir": "../../MCloud",
+  "passcode":  ""
 }
