--- a/appsettings.json
+++ b/appsettings.json
@@ -24,6 +24,8 @@
     // directory path to store track files
     // (default: "data/storage")
 
+    "StorageUrlBase": "",
+
     "passcode": ""
     // if it's not empty, the user needs the passcode to access the website.
 }
