--- a/appsettings.json
+++ b/appsettings.json
@@ -24,7 +24,9 @@
     // directory path to store track files
     // (default: "data/storage")
 
-    "StorageUrlBase": "",
+    //"StorageUrlBase": "",
+
+    //"StorageArg": "qcloud:[bucket]:[region]:[secret_id]:[secret_key]",
 
     "passcode": ""
     // if it's not empty, the user needs the passcode to access the website.
