--- a/appsettings.json
+++ b/appsettings.json
@@ -28,6 +28,21 @@
 
     //"StorageArg": "qcloud:[bucket]:[region]:[secret_id]:[secret_key]",
 
+    "Converters": [
+        // {
+        //     "Name": "128k.aac",
+        //     "Format": "aac",
+        //     "Bitrate": 128,
+        //     "CommandLine": "ffmpeg -i {0} -f wav - | fdkaac - -p 5 -m 5 -o {1}"
+        // }
+        {
+            "Name": "128k.ogg",
+            "Format": "ogg",
+            "Bitrate": 128,
+            "CommandLine": "ffmpeg -i {0} -f wav - | oggenc2 - -o {1}"
+        }
+    ],
+
     "passcode": ""
     // if it's not empty, the user needs the passcode to access the website.
 }
