complete ConvertService & store track duration in DB

--- a/appsettings.json
+++ b/appsettings.json
@@ -29,18 +29,30 @@
     //"StorageArg": "qcloud:[bucket]:[region]:[secret_id]:[secret_key]",
 
     "Converters": [
-        // {
-        //     "Name": "128k.aac",
-        //     "Format": "aac",
-        //     "Bitrate": 128,
-        //     "CommandLine": "ffmpeg -i {0} -f wav - | fdkaac - -p 5 -m 5 -o {1}"
-        // }
         {
-            "Name": "128k.ogg",
-            "Format": "ogg",
+            "Name": "256k-lc.m4a",
+            "Format": "aac",
+            "Bitrate": 256,
+            "CommandLine": "ffmpeg -loglevel warning -i {0} -f wav - | fdkaac - --moov-before-mdat -p 2 -m 5 -o {1}"
+        },
+        {
+            "Name": "128k-lc.m4a",
+            "Format": "aac",
             "Bitrate": 128,
-            "CommandLine": "ffmpeg -i {0} -f wav - | oggenc2 - -o {1}"
-        }
+            "CommandLine": "ffmpeg -loglevel warning -i {0} -f wav - | fdkaac - --moov-before-mdat -p 2 -m 3 -o {1}"
+        },
+        {
+            "Name": "48k-he.m4a",
+            "Format": "aac",
+            "Bitrate": 48,
+            "CommandLine": "ffmpeg -loglevel warning -i {0} -f wav - | fdkaac - --moov-before-mdat -p 5 -m 3 -o {1}"
+        },
+        // {
+        //     "Name": "128k.ogg",
+        //     "Format": "ogg",
+        //     "Bitrate": 128,
+        //     "CommandLine": "ffmpeg -i {0} -f wav - | oggenc2 - -o {1}"
+        // },
     ],
 
     "passcode": ""
