add comment feature switches

--- a/appsettings.json
+++ b/appsettings.json
@@ -28,6 +28,11 @@
 
     //"StorageArg": "qcloud:[bucket]:[region]:[secret_id]:[secret_key]",
 
+    "NotesEnabled": true,
+    "DiscussionEnabled": true,
+    "TrackCommentsEnabled": true,
+    // comment feature switches
+
     "Converters": [
         {
             "Name": "256k-lc.m4a",
