add docker support

--- a/MCloudServer.csproj
+++ b/MCloudServer.csproj
@@ -21,6 +21,7 @@
     <None Update="passcode.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Remove="webapp/**" />
   </ItemGroup>
 
 </Project>
