--- a/MCloudServer.csproj
+++ b/MCloudServer.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.1" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
     <PackageReference Include="Tencent.QCloud.Cos.Sdk" Version="5.4.12" />
     <PackageReference Include="z440.atl.core" Version="3.15.0" />
   </ItemGroup>
