--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,8 +2,6 @@ name: Docker
 
 on:
   push:
-    branches:
-      - 'master'
 
 jobs:
   docker:
@@ -21,12 +19,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
+        name: Build and push (master, latest)
+        if: github.ref_name == 'master'
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: yuuza/musiccloud:latest
+      -
+        name: Build and push (dev)
+        if: github.ref_name == 'dev'
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: yuuza/musiccloud:dev
 
   # docker-arm64:
   #   runs-on: ubuntu-latest
