--- a/appsettings.json
+++ b/appsettings.json
@@ -15,14 +15,15 @@
     "dbstr": "data/data.db",
     // for SQLite, it's only the filename (i.e., without "Filename=").
     // for PostgreSQL, it's the connection string.
+    // (if undefined: "data/data.db" (sqlite) or error (pg))
 
-    "staticdir": "../MusicCloud",
+    "staticdir": "../MusicCloud/dist",
     // directory path to static web files
-    // (default to not serve static files)
+    // (if undefined: not serve static files)
 
     "storagedir": "data/storage",
     // directory path to store track files
-    // (default: "data/storage")
+    // (if undefined: "data/storage")
 
     //"StorageUrlBase": "",
 
