basic support for OpenID Connect (oidc) login

--- a/appsettings.json
+++ b/appsettings.json
@@ -27,6 +27,25 @@
 
     //"StorageUrlBase": "",
 
+    "AllowRegistration": true,
+    // Whether to allow registration of new users
+
+    "PasswordLogin": true,
+    // Whether to enable password login
+
+    "SocialLogin": {
+        // Social login methods
+        // "awesomeprovider": {
+        //     "Name": "(display name)",
+        //     "Icon": "",
+        //     "Type": "oidc",
+        //     "AuthEndpoint": "",
+        //     "TokenEndpoint": "",
+        //     "ClientId": "",
+        //     "ClientSecret": ""
+        // }
+    },
+
     "NotesEnabled": true,
     "DiscussionEnabled": true,
     "TrackCommentsEnabled": true,
