--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    // IntelliSense を使用して利用可能な属性を学べます。
+    // 既存の属性の説明をホバーして表示します。
+    // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,14 +9,13 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.0/MCloudServer.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/MCloudServer.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
-            //// don't open browser
             // "serverReadyAction": {
             //     "action": "openExternally",
-            //     "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+            //     "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
             // },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
@@ -28,8 +27,7 @@
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
+            "request": "attach"
         }
     ]
 }
