update the sample appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+    //////////////////////////////////
+    // ASP.NET Core configurations
+    //////////////////////////////////
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -7,6 +11,10 @@
         }
     },
     "AllowedHosts": "*",
+
+    //////////////////////////////////
+    // Database configurations
+    //////////////////////////////////
 
     "dbtype": "sqlite",
     // sqlite -> SQLite
@@ -17,6 +25,10 @@
     // for PostgreSQL, it's the connection string.
     // (if undefined: "data/data.db" (sqlite) or error (pg))
 
+    //////////////////////////////////
+    // Frontend & storage location
+    //////////////////////////////////
+
     "staticdir": "../MusicCloud/dist",
     // directory path to static web files
     // (if undefined: not serve static files)
@@ -26,6 +38,11 @@
     // (if undefined: "data/storage")
 
     //"StorageUrlBase": "",
+
+
+    //////////////////////////////////
+    // Login configurations
+    //////////////////////////////////
 
     "AllowRegistration": true,
     // Whether to allow registration of new users
@@ -46,11 +63,18 @@
         // }
     },
 
+
+    //////////////////////////////////
+    // Comment configurations
+    //////////////////////////////////
     "NotesEnabled": true,
     "DiscussionEnabled": true,
     "TrackCommentsEnabled": true,
-    // comment feature switches
 
+
+    //////////////////////////////////
+    // Audio transocoding configurations
+    //////////////////////////////////
     "Converters": [
         {
             "Name": "256k-lc.m4a",
