--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            // "preLaunchTask": "build",
             "program": "${workspaceFolder}/bin/Debug/net6.0/MCloudServer.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
