Add auto converting option

--- a/appsettings.docker.json
+++ b/appsettings.docker.json
@@ -37,7 +37,8 @@
             "Name": "256k-lc.m4a",
             "Format": "aac",
             "Bitrate": 256,
-            "CommandLine": "ffmpeg -loglevel warning -i {0} -f wav - | fdkaac - --moov-before-mdat -p 2 -m 5 -o {1}"
+            "CommandLine": "ffmpeg -loglevel warning -i {0} -f wav - | fdkaac - --moov-before-mdat -p 2 -m 5 -o {1}",
+            "Auto": true // Start converting when the track is uploaded
         },
         {
             "Name": "128k-lc.m4a",
