--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,41 @@ jobs:
         dotnet-version: '6.0.x'
 
     - name: Build publish
-      run: dotnet publish -c Release
+      run: dotnet publish -c Release -o publish
 
     - name: Upload publish
       uses: actions/upload-artifact@v2
       with:
         name: publish
-        path: bin/Release/net5.0/publish
+        path: publish
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push (master, latest)
+        if: github.ref_name == 'master'
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: yuuza/musiccloud:latest
+      -
+        name: Build and push (dev)
+        if: github.ref_name == 'dev'
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: yuuza/musiccloud:dev
